objects/LLC_BI__Funding_Method__c.object
<CustomObject>
    <fields>
        <fullName>ACH_ABA_Routing_Number__c</fullName>
        <label>ACH ABA Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Account_Name__c</fullName>
        <label>ACH Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Account_Number__c</fullName>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Bank_Name__c</fullName>
        <label>ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Number__c</fullName>
        <label>Debit Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Billing_Month__c</fullName>
        <label>First Billing Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JE_from_Account_Name__c</fullName>
        <label>JE from Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JE_from_Account_Number__c</fullName>
        <label>JE from Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Type__c</fullName>
        <description>Populate this picklist field to indicate the deposit account type. This field is manually populated during the deposit account opening workflow.</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>MMA Savings</fullName>
                </value>
                <value>
                    <fullName>MMA Checking</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Completion_ID__c</fullName>
        <description>This text field autopopulates with an ID that is used to verify vendor details for funding transaction.</description>
        <label>Funding Completion ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Failure_Detail__c</fullName>
        <description>This optional long text field autopopulates with an error message from the vendor if the account funding request fails.</description>
        <label>Funding Failure Detail</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Method_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when the user selects a funding method during the New Deposit Workflow. It indicates which Funding Method Type is related to the Funding Method of a deposit account.</description>
        <label>Funding Method Type</label>
        <referenceTo>LLC_BI__Funding_Method_Type__c</referenceTo>
        <relationshipLabel>Funding Methods</relationshipLabel>
        <relationshipName>Funding_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Session_ID__c</fullName>
        <description>This text field autopopulates with the Session ID during which a funding transaction occurs.</description>
        <label>Funding Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Status__c</fullName>
        <description>This picklist field autopopulates with the current funding status, used to track the progress of deposit account funding.</description>
        <label>Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Trial Deposits</fullName>
                </value>
                <value>
                    <fullName>Trial Deposit Failure</fullName>
                </value>
                <value>
                    <fullName>Trial Deposit Success</fullName>
                </value>
                <value>
                    <fullName>Trial Deposit Reject</fullName>
                </value>
                <value>
                    <fullName>Funding Success</fullName>
                </value>
                <value>
                    <fullName>Funding Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Target_ID__c</fullName>
        <description>This text field autopopulates with the ID of the institution using the funding integration.</description>
        <label>Funding Target ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_User_ID__c</fullName>
        <description>This text field autopopulates with the User ID of the user of the funding integration.</description>
        <label>Funding User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_to_Appear_on_Checks__c</fullName>
        <label>Name to Appear on Checks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <description>Inputting a PIN number</description>
        <label>PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_PIN__c</fullName>
        <description>Used to verify the inputted PIN number</description>
        <label>Verify PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_from_Account_ABA__c</fullName>
        <label>Wire from Account ABA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_from_Account_Name__c</fullName>
        <label>Wire from Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_from_Account_Number__c</fullName>
        <label>Wire from Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_from_Institution__c</fullName>
        <label>Wire from Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funding Method</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Funding Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>